Inserted headers and footers

--- a/01StudSignIn.html
+++ b/01StudSignIn.html
@@ -87,6 +87,5 @@
 
 <b><font color="red" size="5">This is in TESTING mode only!!! You are creating simulated appointments!!!</font></b>
 
-  </body>
-  
-</html>
+<?php include('footer.php'); ?>
+
