--- a/01StudSignIn.html
+++ b/01StudSignIn.html
@@ -3,88 +3,89 @@
   <head>
     <meta charset="UTF-8" />
     <title>UMBC COEIT Engineering and Computer Science Advising Student Sign In</title>
-	<!--<link rel='stylesheet' type='text/css' href='../css/standard.css'/>-->
-      <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-    <style>
-    body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }
-
-  main {
-    flex: 1 0 auto;
-  }
-    </style>
-    </head>
+	<link rel='stylesheet' type='text/css' href='css/standard.css'/>
+  </head>
   <body>
-        <header>
-            <nav class="yellow">
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo center">COEIT Engineering and Computer Science Advising</a>
-    </div>
-  </nav>
-        </header>
-        <main>
-       
-        <div class="container">               
-                <h4>Student Sign In</h4>
-                <form action="StudProcessSignIn.php" method="post" name="SignIn" id="SignIn">
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <input id="firstN" size="30" maxlength="20 "type="text" name="firstN" required autofocus>
-                            <label for="firstN">First Name</label>
-                        </div>
-                        <div class="input-field col s6">
-                            <input id="lastN" size="30" maxlength="20" type="text" name="lastN" required>
-                            <label for="lastN">Last Name</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="studID" size="30" maxlength="20" type="text" pattern="[A-Za-z]{2}[0-9]{5}" title="AB12345" placeholder="AB12345" name="studID" required>
-                            <label for="studID">Student ID</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input id="email" size="30" maxlength="40" type="email" name="email" placeholder="student1@umbc.edu" required>
-                            <label for="email">Email</label>
-                        </div>
-                    </div>
-                    <div>    
-                        <select>
-                            <option value="" disabled selected>Select Major</option>
-                            <option>Computer Engineering</option>
-				            <option>Computer Science</option>
-				            <option>Mechanical Engineering</option>
-				            <option>Chemical Engineering</option
-                        </select>
-                        <label>Materialize Select</label>
-                    </div>
-                    <div>
-                        <input type="submit" name="next" value="Next">
-                    </div>      
-                </form>
+    <div id="login">
+		<div><b><font color="red" size="1"></font>This works best using any browser <u>OTHER</u> than IE.</b></div>
+      <div id="form">
+        <div class="top">
+		<h1>COEIT Engineering and Computer Science Advising</h1>
+		<h2>Student Sign In</h2><br>
+        <form action="StudProcessSignIn.php" method="post" name="SignIn">
+	    <div class="field">
+	      <label for="firstN">First Name</label>
+	      <input id="firstN" size="30" maxlength="20" type="text" name="firstN" required autofocus>
+	    </div>
+	    <div class="field">
+	      <label for="lastN">Last Name</label>
+	      <input id="lastN" size="30" maxlength="20" type="text" name="lastN" required>
+	    </div>
+        <div class="field">
+            <label for="studID">Student ID</label>
+            <input id="studID" size="30" maxlength="7" type="text" pattern="[A-Za-z]{2}[0-9]{5}" title="AB12345" placeholder="AB12345" name="studID" required>
         </div>
-            </main>
-        <!--footer-->
-    <footer>
-        <div class="section page-footer teal darken-1 white-text">
-	       <div class="container">
-            <span>&copy IzzyMattNick</span>
-	       </div>
+		<div class="field">
+            <label for="email">E-mail</label>
+            <input id="email" size="30" maxlength="40" type="email" name="email" placeholder="student1@umbc.edu" required>
         </div>
-    </footer>
-        <!-- Compiled and minified JavaScript -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>  
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-      <script>
-            $(document).ready(function() {
-                $('select').material_select();
-            });
-      </script>
+        <div class="field">
+              <label for="major">Major</label>
+              <select id="major" name = "major">
+				<option>Computer Engineering</option>
+				<option>Computer Science</option>
+				<option>Mechanical Engineering</option>
+				<option>Chemical Engineering</option>
+				<!-- Maybe one day ---------------------------
+				<option>Africana Studies</option>
+				<option>American Studies</option>
+				<option>Ancient Studies</option>
+				<option>Anthropology</option>
+				<option>Asian Studies</option>
+				<option>Biochemistry and Molecular Biology</option>
+				<option>Bioinformatics and Computational Biology</option>
+				<option>Biological Sciences</option>
+				<option>Business Technology Administration</option>
+				<option>Chemistry</option>
+				<option>Dance</option>
+				<option>Economics</option>
+				<option>Financial Economics</option>
+				<option>Emergency Health Services</option>
+				<option>English</option>
+				<option>Environmental Science and Environmental Studies</option>
+				<option>Gender and Women's Studies</option>
+				<option>Geography</option>
+				<option>Global Studies</option>
+				<option>Health Administration and Policy</option>
+				<option>History</option>
+				<option>Information Systems</option>
+				<option>Interdisciplinary Studies</option>
+				<option>Management of Aging Services</option>
+				<option>Mathematics</option>
+				<option>Statistics</option>
+				<option>Media and Communication Studies</option>
+				<option>Modern Languages, Linguistics and Intercultural Communication</option>
+				<option>Music</option>
+				<option>Philosophy</option>
+				<option>Physics</option>
+				<option>Political Science</option>
+				<option>Psychology</option>
+				<option>Social Work</option>
+				<option>Sociology</option>
+				<option>Theatre</option>
+				<option>Visual Arts</option>
+				<option>Undecided</option>
+				<option>Other</option> -->
+				</select>
+        </div>
+	    <div class="nextButton">
+			<input type="submit" name="next" class="button large go" value="Next">
+	    </div>
+		</div>
+		</form>
+
+<b><font color="red" size="5">This is in TESTING mode only!!! You are creating simulated appointments!!!</font></b>
+
   </body>
   
 </html>
