--- a/AdminSignIn.html
+++ b/AdminSignIn.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>UMBC COEIT Engineering and Computer Science Advising Admin Sign In</title>
-    <link rel="stylesheet" type="text/css" href="css/standard.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+    <link rel='stylesheet' type='text/css' href='css/standard.css'/>
   </head>
   <body>
     <div id="login">
@@ -15,7 +16,7 @@
 
 	    <div class="field">
 	      <label for="UserN">Username</label>
-	      <input id="UserN" size="20" maxlength="50" type="text" name="UserN" required>
+	      <input id="UserN" size="20" maxlength="50" type="text" name="UserN" required autofocus>
 	    </div>
 
 	    <div class="field">
@@ -28,6 +29,4 @@
 	    </div>
 	</div>
 	</form>
-  </body>
-  
-</html>
+	<?php include('footer.php'); ?>
